--- a/web/css/main.css
+++ b/web/css/main.css
@@ -47,10 +47,9 @@ a.logo{
 }
 .links li{
 	display: inline-block;
-	padding: 0 21px 0 21px;
 	width: auto;
 }
-.links li:hover{
+.links li a:hover{
     background-color: rgba(249,134,0,0.3); /*Sombreado botones*/
 }
 .links li a{
@@ -63,6 +62,7 @@ text-transform: uppercase;
 width: auto;
 text-decoration: none;
 outline: none;
+padding: 15.5px 21px;
 }
 .caja{
     padding: 60px 0;
