--- a/web/css/main.css
+++ b/web/css/main.css
@@ -17,6 +17,7 @@ body{
 .cabecera{
     width: 100%;
     margin: 0 auto;
+    position: fixed;
 }
 a.logo{
     display: block;
@@ -27,7 +28,7 @@ a.logo{
 }
 .navegacion{
 	width: 100%;
-	background-color: rgb(118, 0, 124); /*color barra*/
+	background-color: rgb(0, 65, 74); /*color barra*/
 	line-height: 50px;
         margin: 0 auto;
         max-height: 50px;
@@ -39,18 +40,17 @@ a.logo{
 }
 .links{
         display: block;
-	text-align: right;
         float: right;
-        margin: 0 auto;
+        margin: 0;
         text-align: center;
         padding: 0 21px 0;
+        list-style: none;
 }
-.links li{
-	display: inline-block;
-	width: auto;
+.links > li{
+    float: left;
 }
-.links li a:hover{
-    background-color: rgba(249,134,0,0.3); /*Sombreado botones*/
+.links li:hover{
+    background-color: rgba(24, 6, 35, 0.7); /*Sombreado botones*/
 }
 .links li a{
 color: #fff; /*color letra barra*/
@@ -63,6 +63,21 @@ width: auto;
 text-decoration: none;
 outline: none;
 padding: 15.5px 21px;
+}
+.links li ul{
+    display: none;
+    position: absolute;
+    width: 260px;
+    background-color: rgba(0, 65, 74, 0.7);
+    padding: 0;
+}
+.links li:hover > ul{
+    display: block;
+}
+.links li ul li{
+    position: relative;
+    display: block;
+    text-align: left;
 }
 .caja{
     padding: 60px 0;
@@ -77,6 +92,7 @@ padding: 15.5px 21px;
     max-width: 1280px;
     margin: 0 auto;
     padding: 51px 0;
+    z-index: -1;
 }
 .imagen{
     width: 50%;
@@ -224,7 +240,7 @@ h4{
 /*====== footer*/
 .C{
 	padding: 30px 0;
-	background-color: rgb(118, 0, 124); /*color pie de pagina*/
+	background-color: rgb(0, 65, 74); /*color pie de pagina*/
 	color: #fff;
         padding: 0;
 }
