--- a/web/css/main.css
+++ b/web/css/main.css
@@ -92,6 +92,8 @@ padding: 15.5px 21px;
     max-width: 1280px;
     margin: 0 auto;
     padding: 51px 0;
+}
+.atras{
     z-index: -1;
 }
 .imagen{
