--- a/web/css/main.css
+++ b/web/css/main.css
@@ -5,7 +5,7 @@ body{
 	margin: 0;
 	padding: 0;
 	position: relative;
-	width: auto;
+	min-width: 1035px;
         line-height: 1.5;
 }
 #pagina{
@@ -16,6 +16,7 @@ body{
 /*====== Barra de navegacion*/
 .cabecera{
     width: 100%;
+    min-width: 912px;
     margin: 0 auto;
     position: fixed;
 	z-index: 1;
