--- a/web/css/main.css
+++ b/web/css/main.css
@@ -85,7 +85,6 @@ padding: 15.5px 21px;
     padding: 60px 0;
     width: 100%;
     display: flex;
-    align-items: center;
     min-height: 80%;
     margin: auto;
 }
@@ -143,8 +142,8 @@ h4{
 }
 .espacio{
     border-top: 1px solid #E1E1E1; /*linea divisoria*/
-    font-size: 2rem;
     padding-top: 30px;
+    margin: 0 21px;
 }
 .B{
     margin: 0;
@@ -158,6 +157,55 @@ h4{
     float: left;
     box-sizing: border-box;
     padding: 0 0.75rem;
+}
+.P{
+  position: relative;
+  width: 221px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 0;
+  box-sizing: border-box;
+  height: 460px;
+}
+.PP{
+    width: 70%;
+    float: right;
+    padding: 21px;
+    margin-left: 25%;
+}
+.banner{
+    position: relative;
+    width: 100%;
+    margin: 66px 0 0 0;
+    border-bottom: solid 1px #E1E1E1;
+    padding: 0;
+    box-sizing: border-box;
+}
+.T{
+    width: 21%;
+    margin-left: 21px;
+    float: left;
+    position: fixed;
+}
+.T ul{
+    background-color: rgb(0, 65, 74);
+    list-style: none;
+    padding: 0;
+    min-width: 241px;
+    margin-top: 29px;
+}
+.T ul li{
+    padding: 9px 0;
+}
+.T ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 14px;
+    padding: 15.5px 21px;
+}
+.T ul li:hover{
+    background-color: rgba(24, 6, 35, 0.7); /*Sombreado botones*/
 }
 .hover{
     position: relative;
@@ -205,7 +253,6 @@ h4{
 }
 .tex p{
     margin:0;
-	height: 100px;
 }
 .accion{
     border-top: 1px solid rgba(160,160,160,0.2);
