--- a/web/css/main.css
+++ b/web/css/main.css
@@ -19,7 +19,7 @@ body{
     min-width: 912px;
     margin: 0 auto;
     position: fixed;
-	z-index: 1;
+    z-index: 1;
 }
 a.logo{
     display: block;
@@ -30,7 +30,7 @@ a.logo{
 }
 .navegacion{
 	width: 100%;
-	background-color: rgb(0, 65, 74); /*color barra*/
+	background-color: rgb(254, 196, 9); /*color barra*/
 	line-height: 50px;
         margin: 0 auto;
         max-height: 50px;
@@ -52,11 +52,11 @@ a.logo{
     float: left;
 }
 .links li:hover{
-    background-color: rgba(24, 6, 35, 0.7); /*Sombreado botones*/
+    background-color: rgba(23, 191, 195, 0.5); /*Sombreado botones*/
 }
 .links li a{
-color: #fff; /*color letra barra*/
 font-size: 16px;
+color: black;
 font-weight: normal;
 line-height: 14px;
 text-align: center;
@@ -70,8 +70,11 @@ padding: 15.5px 21px;
     display: none;
     position: absolute;
     width: 260px;
-    background-color: rgba(0, 65, 74, 0.7);
+    background-color: rgb(23, 191, 195);
     padding: 0;
+}
+.links li ul li:hover{
+    background-color: rgba(254, 196, 9, 0.5);
 }
 .links li:hover > ul{
     display: block;
@@ -80,6 +83,9 @@ padding: 15.5px 21px;
     position: relative;
     display: block;
     text-align: left;
+}
+.links li ul li a{
+    color:#fff;
 }
 .caja{
     padding: 60px 0;
@@ -188,24 +194,25 @@ h4{
     position: fixed;
 }
 .T ul{
-    background-color: rgb(0, 65, 74);
+    background-color: rgb(23, 191, 195);
     list-style: none;
     padding: 0;
     min-width: 241px;
     margin-top: 29px;
+    text-transform: uppercase;
 }
 .T ul li{
     padding: 9px 0;
 }
 .T ul li a{
-    color: #fff;
     text-decoration: none;
     font-size: 16px;
     line-height: 14px;
     padding: 15.5px 21px;
+    color:#fff;
 }
 .T ul li:hover{
-    background-color: rgba(24, 6, 35, 0.7); /*Sombreado botones*/
+    background-color: rgba(254, 196, 9, 0.5); /*Sombreado botones*/
 }
 .hover{
     position: relative;
@@ -239,9 +246,9 @@ h4{
    width: 100%;
    background-color: rgba(0,0,0,.5);
    padding: 9px 0;
-   color: #fff;
    position: absolute;
    bottom: 0;
+   color: black;
    left: 0;
    font-size: 24px;
    font-weight: 300;
@@ -289,12 +296,13 @@ h4{
 /*====== footer*/
 .C{
 	padding: 30px 0;
-	background-color: rgb(0, 65, 74); /*color pie de pagina*/
-	color: #fff;
+	background-color: rgb(254, 196, 9); /*color pie de pagina*/
+	color: black;
         padding: 0;
 }
 .M{
     width: 50%;
+    color: black;
 }
 .redes{
     list-style-type: none;
@@ -303,11 +311,11 @@ h4{
 }
 .redes li a{
     text-decoration: none;
-    color: #fff;
+    color: black;
 }
 .copyright{
         width: 100%;
 	text-align: center;
-	color: #fff;
         border-top: 1px solid rgba(255,255,255,.2);
+        color: black;
 }
