--- a/web/css/main.css
+++ b/web/css/main.css
@@ -324,12 +324,14 @@ h4{
 .contenido{
     margin: auto;
     width: 60%;
-    height: 60%;
     color: gray;
     max-width: 66%;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 .contenido h2{
     text-align: center;
+    margin-top: 0;
 }
 form {
     margin: auto;
@@ -343,6 +345,7 @@ form input {
     width: 100%;
     margin: 30px auto;
     font-size: 20px;
+    width: 93%;
 } 
 form input[type="submit"] {
     background: linear-gradient(yellow,lightgray);
@@ -352,7 +355,7 @@ form input[type="submit"] {
     cursor: pointer;
     border-radius:20px;
     margin-bottom: 0;
-    width: 107%;
+    width: 100%;
 }
 form input[type="submit"]:hover {
     opacity:1;                        
