--- a/web/css/main.css
+++ b/web/css/main.css
@@ -171,7 +171,7 @@ h4{
   margin-bottom: 10px;
   padding: 0;
   box-sizing: border-box;
-  height: 460px;
+  height: 463px;
 }
 .PP{
     width: 70%;
@@ -220,6 +220,10 @@ h4{
     transition: box-shadow .25s;
     border-radius: 2px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+.P .hover{
+    width: 221px;
+    height: 463px;
 }
 .hover:hover{
     box-shadow:0 15px 10px 0 rgba(0,0,0,0.2),0 15px 20px 0 rgba(0,0,0,0.22);
