--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,6 +1,8 @@
 /*=====================================================
 					Estilos generales
 ======================================================*/
+
+
 body{
 	margin: 0;
 	padding: 0;
@@ -362,4 +364,14 @@ form input[type="submit"] {
 }
 form input[type="submit"]:hover {
     opacity:1;                        
+}
+/*carrito*/
+table{
+border: 1px solid #000;
+border-radius: 2px;
+box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+th, td{
+   text-align: left;
+   border: 1px solid #000;
 }
