--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,8 +1,6 @@
 /*=====================================================
 					Estilos generales
 ======================================================*/
-
-
 body{
 	margin: 0;
 	padding: 0;
@@ -37,6 +35,7 @@ a.logo{
 	line-height: 50px;
         margin: 0 auto;
         max-height: 50px;
+        min-width: 985px;
 }
 .logo{
 	height: 50px;
@@ -60,7 +59,6 @@ a.logo{
 .links li a{
 color: black;
 font-weight: normal;
-line-height: 14px;
 text-align: center;
 text-transform: uppercase;
 width: auto;
@@ -85,6 +83,7 @@ padding: 15.5px 21px;
     position: relative;
     display: block;
     text-align: left;
+    height: 50px;
 }
 .links li ul li a{
     color:#fff;
@@ -199,9 +198,9 @@ h4{
     background-color: rgb(23, 191, 195);
     list-style: none;
     padding: 0;
-    min-width: 241px;
     margin-top: 29px;
     text-transform: uppercase;
+    min-width: 251px;
 }
 .T ul li{
     padding: 9px 0;
@@ -226,7 +225,7 @@ h4{
 }
 .P .hover{
     width: 221px;
-    height: 463px;
+    height: 430px;
 }
 .hover:hover{
     box-shadow:0 15px 10px 0 rgba(0,0,0,0.2),0 15px 20px 0 rgba(0,0,0,0.22);
@@ -327,6 +326,8 @@ h4{
 }
 /*====== Datos de Usuario*/
 .contenido{
+    /*Cambio*/
+    text-align: center;
     margin: auto;
     width: 60%;
     color: gray;
@@ -350,7 +351,7 @@ form input {
     width: 100%;
     margin: 30px auto;
     font-size: 20px;
-    width: 93%;
+    width: 89%;
 } 
 form input[type="submit"] {
     background: linear-gradient(yellow,lightgray);
@@ -365,13 +366,46 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
     opacity:1;                        
 }
-/*carrito*/
-table{
-border: 1px solid #000;
-border-radius: 2px;
-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+
+/*Cambio*/
+.mybut{
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #ffab23));
+    background:-moz-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+    background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+    background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+    background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
+    background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
+    background-color:#ffec64;
+    -moz-border-radius:12px;
+    -webkit-border-radius:12px;
+    border-radius:12px;
+    border:2px solid #ffaa22;
+    cursor:pointer;
+    color:#333333;
+    font-size:15px;
+    font-weight:bold;
+    padding:5px 12px;
 }
-th, td{
-   text-align: left;
-   border: 1px solid #000;
+.mybut:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffab23), color-stop(1, #ffec64));
+	background:-moz-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:-webkit-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:-o-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:-ms-linear-gradient(top, #ffab23 5%, #ffec64 100%);
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
+	background-color:#ffab23;
 }
+.mybut:active {
+	position:relative;
+	top:1px;
+}
+table {
+    border-collapse: collapse;  width: 100%;
+}
+td, th {
+    text-align: center; padding: 8px;
+}
+tr:nth-child(even){background-color: #f2f2f2;}
+th { background-color: #ffab22; color: white;}
